data/ArticleView/style.css
/* CSS RESET
-------------------------------------------------------------------------------------------------------------------------------------------*/
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
/* Sensible box-sizing */
body,
html,
div,
blockquote,
img,
label,
p,
h1,
h2,
h3,
h4,
h5,
h6,
pre,
ul,
ol,
li,
dl,
dt,
dd,
form,
a,
fieldset,
input,
th,
td,
figure {
  -webkit-user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-drag: none;
  user-select: none;
  margin: 0;
  padding: 0;
  border: 0;
}
img {
  border: 0;
  box-sizing: content-box;
}
ol,
ul {
  list-style: disc outside none;
  margin-left:30px;
}
/* Style stripping */
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
}
blockquote,
q {
  quotes: "" "";
}
/* Blockquotes */
.both {
  clear: both;
}
br.both {
  clear: both;
  display: block;
  width: 0px;
  height: 0px;
  overflow: hidden;
}
/* Basic clear styles */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
/* HTML5 reset */
.cf:after,
.pw:after {
  content: "";
  display: table;
  clear: both;
}
/* Clearfix */
div.pw {
  width: 90%;
  max-width: 1100px;
  margin: 0 auto;
  padding: 5% 0;
}
/* GENERAL & TYPOGRAPHY
-------------------------------------------------------------------------------------------------------------------------------------------*/
@font-face {
  font-family: 'Open Sans';
  src: url('assets/opsn-itl-webfont.eot');
  src: url('assets/opsn-itl-webfont.eot?#iefix') format('embedded-opentype'), url('assets/opsn-itl-webfont.woff2') format('woff2'), url('assets/opsn-itl-webfont.woff') format('woff'), url('assets/opsn-itl-webfont.ttf') format('truetype'), url('assets/opsn-itl-webfont.svg#open_sansitalic') format('svg');
  font-weight: 300;
  font-style: italic;
}
@font-face {
  font-family: 'Open Sans';
  src: url('assets/opsn-reg-webfont.eot');
  src: url('assets/opsn-reg-webfont.eot?#iefix') format('embedded-opentype'), url('assets/opsn-reg-webfont.woff2') format('woff2'), url('assets/opsn-reg-webfont.woff') format('woff'), url('assets/opsn-reg-webfont.ttf') format('truetype'), url('assets/opsn-reg-webfont.svg#open_sansregular') format('svg');
  font-weight: 300;
  font-style: normal;
}
@font-face {
  font-family: 'Open Sans';
  src: url('assets/opsn-sem-webfont.eot');
  src: url('assets/opsn-sem-webfont.eot?#iefix') format('embedded-opentype'), url('assets/opsn-sem-webfont.woff2') format('woff2'), url('assets/opsn-sem-webfont.woff') format('woff'), url('assets/opsn-sem-webfont.ttf') format('truetype'), url('assets/opsn-sem-webfont.svg#open_sanssemibold') format('svg');
  font-weight: 500;
  font-style: normal;
}
@font-face {
  font-family: 'Droid Sans';
  src: url('assets/DroidSans-webfont.eot');
  src: url('assets/DroidSans-webfont.eot?#iefix') format('embedded-opentype'), url('assets/DroidSans-webfont.woff') format('woff'), url('assets/DroidSans-webfont.ttf') format('truetype'), url('assets/DroidSans-webfont.svg#droid_sansregular') format('svg');
  font-weight: 300;
  font-style: normal;
}
@font-face {
  font-family: 'Droid Sans';
  src: url('DroidSans-Bold-webfont.eot');
  src: url('DroidSans-Bold-webfont.eot?#iefix') format('embedded-opentype'), url('DroidSans-Bold-webfont.woff') format('woff'), url('DroidSans-Bold-webfont.ttf') format('truetype'), url('DroidSans-Bold-webfont.svg#droid_sansbold') format('svg');
  font-weight: 500;
  font-style: normal;
}
body {
  padding: 3rem;
  cursor:default;
  font-family: 'Droid Sans', 'Open Sans';
  font-weight: 300;
}
table,
td,
th {
    border: 1px solid black;
    border-collapse: collapse;
    vertical-align: center;
    padding: 10px;
}
th {
    background-color: #eee;
}
.tlblue {
  background-color: #2295AB;
   color: white;
}
.tlgrey {
  background-color: #eee;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: #318c34;
  font-weight: 500;
  font-family: 'Open Sans', Arial, sans-serif, sans;
  text-align: left;
  line-height: 120%;
}
h2 {
  margin-bottom: 1rem;
  padding-bottom: 0.75rem;
  border-bottom: 2px solid #318c34;
  font-size: 2.5rem;
  font-weight: 300;
}
h3 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}
h4 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
  text-transform: uppercase;
  font-weight: 300;
}
h5 {
  color: #000;
 font-size: 1.2rem;
  margin-bottom: 0.25rem;
}
h6 {
  color: #000;
  font-size: 1rem;
  margin-bottom: 0.25rem;
  text-transform: uppercase;
}
em,
i {
  font-style: italic;
}
strong,
b {
  font-weight: 500;
}
body,
p {
  margin-bottom: 1rem;
  color: #1d1f1c;
  font-size: 1rem;
  line-height: 1.8em;
  text-align: left;
}
pre,
code {
  background-color:#eee;
  overflow:auto;
  margin:0 0 1em;
}
pre {
  padding:.5em 1em;
}
code {
    padding:.3em .3em;
}
p:last-of-type {
  margin-bottom: 0;
}
a {
  color: #318c34;
 outline : none;
}
a:hover {
  text-decoration: none;
}
strong {
  font-weight: 600;
}
footer,
iframe,
img {
  padding: 0.2rem;
  border: 1px solid rgba(0, 0, 0, 0.05);
  max-width: 100%;
  max-height: auto;
}
figure {
  display: inline-block;
  margin: 2rem auto;
  padding: 1rem;
  border: 1px solid rgba(0, 0, 0, 0.05);
}
figure p,
figure caption {
  font-size: 0.875rem;
  color: rgba(0, 0, 0, 0.6);
}
figure img {
  margin: 0 auto;
  padding: 0;
  border: 0;
  max-width: 100%;
  max-height: auto;
  height: auto;
}
figure:first-child {
  margin-top: 0rem;
}
header.post {
  padding: 2rem;
  background: rgba(0, 0, 0, 0.05);
}
div.introtext {
  font-weight: 600;
}
header.post h1 {
  color: #000;
 font-weight: 600;
}
header.post a:link {
  outline : none;
    text-decoration: none;
}
header.post span.source {
  color: rgba(0, 0, 0, 0.75);
  font-size: 0.75rem;
}
header.post span.author {
  color: rgba(0, 0, 0, 0.8);
  font-size: 0.75rem;
  font-weight: 500;
}
div.content {
  padding: 2rem;
  margin-bottom: 3rem;
  border: 1px solid rgba(0, 0, 0, 0.05);
  text-align: left;
}
/* MIDNIGHT THEME -- also default dark */
div.theme.midnight {
  color:rgba(255, 255, 255, 0.6);
  background: #233540;
}
div.theme .midnight pre{
  background-color:rgba(255, 255, 255, 0.6);
  color:#233540;
 font-family: 'Open Sans';
  font-size: 12px;
}
 
div.theme.midnight table,
div.theme.midnight th,
div.theme.midnight td {
   border: 1px solid rgba(255, 255, 255, 0.6);
}
div.theme.midnight div.content th,
div.theme.midnight header.post {
  background: rgba(0, 0, 0, 0.1);
}
div.theme.midnight header.post h1 {
  color: #fff;
}
div.theme.midnight header.post span.source {
  color: #2978a6;
}
div.theme.midnight header.post span.author {
  color: rgba(255, 255, 255, 0.6);
}
div.theme.midnight div.content {
  border: 1px solid rgba(0, 0, 0, 0.1);
}
div.theme.midnight div.content a {
  color: #2978a6;
}
div.theme.midnight div.content code {
  background-color: rgba(20, 20, 20, 0.6);
}
div.theme.midnight div.content h1,
div.theme.midnight div.content h2,
div.theme.midnight div.content h3,
div.theme.midnight div.content h4 {
  color: #2978a6;
}
div.theme.midnight div.content h2 {
  border-color: #2978a6;
}
div.theme.midnight div.content body,
div.theme.midnight div.content ul,
div.theme.midnight div.content figcaption,
div.theme.midnight div.content h5,
div.theme.midnight div.content h6,
div.theme.midnight div.content p {
  color: rgba(255, 255, 255, 0.6);
  text-align: justify;
}
div.theme.spring {
  background: #f8fff2;
}
div.theme.spring header.post {
  background: #ccffa6;
}
div.theme.spring header.post h1 {
  color: #405e80;
}
div.theme.spring header.post span.source {
  color: #405e80;
}
div.theme.spring div.content {
  border: 1px solid #ccffa6;
}
div.theme.spring div.content a {
  color: #405e80;
}
div.theme.spring div.content h1,
div.theme.spring div.content h2,
div.theme.spring div.content h3,
div.theme.spring div.content h4 {
  color: #405e80;
}
div.theme.spring div.content h2 {
  border-color: #405e80;
}
div.theme.parchment {
  background: #faf2e1;
}
div.theme.parchment header.post h1 {
  color: #99400f;
}
div.theme.parchment div.content a {
  color: #99400f;
}
div.theme.parchment div.content h1,
div.theme.parchment div.content h2,
div.theme.parchment div.content h3,
div.theme.parchment div.content h4 {
  color: #99400f;
}
div.theme.parchment div.content h2 {
  border-color: #99400f;
}
div.theme.parchment div.content body,
div.theme.parchment div.content ul,
div.theme.parchment div.content figcaption,
div.theme.parchment div.content h5,
div.theme.parchment div.content h6,
div.theme.parchment div.content p {
  color: rgba(0, 0, 0, 0.8);
}

